syntax = "proto3";

import "google/protobuf/empty.proto";
option csharp_namespace = "UserServiceGrpc";

service User{
	rpc GetUserByIdAsync (UserRequestSingle) returns (UserResponseSingle);
	rpc GetAllUsersStream (google.protobuf.Empty) returns (stream UserResponseSingle);
	rpc GetAllUsers (google.protobuf.Empty) returns (UserResponseMultiple);
}

message UserRequestSingle{
	int32 id = 1;
}

message UserResponseSingle{
	int32 status = 1;
	int32 userId = 2;
	string username = 3;
	string email = 4;
	string roleName = 5;
	string errorMessage = 6;
}

message UserResponseMultiple {
	int32 status = 1;
	repeated UserResponseSingle list= 2;
	string errorMessage = 3;
}
